fixes button display on mobile and hides option to fork from users who are not logged in

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,10 +1,16 @@
 .SPR {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   width: 100vw;
   margin: auto;
   gap: 2em;
   justify-content: center;
+}
+
+.spr-btn-wrapper {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .spr-btn {
